[package]
name = "rust-book"
version = "0.1.0"
edition = "2024"
description = "Rust Book"
readme = "README.md"
repository = "https://github.com/shian15810/rust-book"
license = "MIT OR Apache-2.0"
keywords = ["rust", "book"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"

[lints.clippy]
pedantic = "warn"
cargo = "warn"
